--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: row;
   padding-left: 0px !important;
+  padding-right: 0px !important;
   min-height: calc(100vh);
 }
 
