--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -2,6 +2,7 @@
     width: 300px;
     background-color: grey;
     display: block !important;
+    background-color: #1f2a40 !important;
 }
 
 .sidebar .nav {
@@ -10,4 +11,14 @@
 
 .collapse:not(.show) {
     display: none !important;
+}
+
+.sidebar a {
+    color: white;
+    text-decoration: none;
+}
+
+.sidebar .profileInfo {
+    color: white;
+    background-color: #3a3f8d;
 }
