--- a/src/components/DefaultContainer/DefaultContainer.css
+++ b/src/components/DefaultContainer/DefaultContainer.css
@@ -1,5 +1,8 @@
 #defaultContainer {
-    width: 100%;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
     font-size: 50px;
+    color: #e0e0e0 !important;
 }
