--- a/src/components/Sidebar/SidebarItem/SidebarItem.css
+++ b/src/components/Sidebar/SidebarItem/SidebarItem.css
@@ -10,8 +10,6 @@
     padding: 5px 35px 5px 20px !important;
 }
 
-/* selected, #6770fa */
-
 .nav-item a:hover {
     color: #868dfb;
     text-decoration: underline;
@@ -28,4 +26,8 @@
 
 .sidebarIcon {
     margin-right: 10px;
+}
+
+.nav-item[active='true'] a{
+    color: #6770fa;
 }
